# sql

./: .codecov.yml  .coderabbit.yaml  .gitignore  .lycheeignore  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  CLAUDE_GUIDE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.rst  MAINTAINERS.md  NOTICE  README.md  RELEASING.md  SPL_test_queries.md  THIRD-PARTY  analyze_accounts.py  build.gradle  bwctest.sh  cluster_demo_data.json  cluster_demo_with_explanations.md  gradle.properties  gradlew  gradlew.bat  integtest.sh  multisearch-gap-analysis.md  multisearch_doc.txt  my.patch  playground_urls.md  ppl-bugfix-harness.md  rio.yml  settings.gradle  test_bin_manual.py  test_cluster_output.java  test_error_format.java
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  draft-release-notes-config.yml  fab-radar.yml  get-sonatype-credentials.sh  maven-publish-utils.sh
.rio/: build.sh  init-sdp.gradle
.rules/: REVIEW_GUIDELINES.md
api/: README.md  build.gradle
async-query/: build.gradle
async-query-core/: .gitignore  README.md  build.gradle
benchmarks/: README.md  build.gradle
build-tools/: sqlplugin-coverage.gradle
buildSrc/: build.gradle
common/: build.gradle
core/: build.gradle
datasources/: build.gradle
direct-query/: build.gradle
direct-query-core/: build.gradle
docker/: docker-compose.yml
docs/: attributions.md  category.json  developing.rst  mustang-classloader-options.md
doctest/: bootstrap.bat  bootstrap.sh  build.gradle  markdown_parser.py  requirements.txt  test_docs.py
elasticsearch/: build.gradle
experimental/: README.md  build.gradle
filesystem/: build.gradle
flink-sql/: build.gradle
flint/: .gitignore  DEVELOPER_GUIDE.md  README.md  build.sbt  scalastyle-config.xml
integ-test/: build.gradle
jdbc/: build.gradle
jenkins/: jdbc-stage-maven-release.jenkinsfile  stage-maven-release.jenkinsfile
language-grammar/: build.gradle
legacy/: build.gradle
objectstorage/: build.gradle
opensearch/: build.gradle
plugin/: build.gradle  settings.gradle
ppl/: build.gradle
prometheus/: build.gradle
protocol/: build.gradle
release-notes/: opendistro-for-elasticsearch-sql.release-notes-1.3.0.0.md  opendistro-for-elasticsearch-sql.release-notes-1.6.0.0.md  opensearch-sql.release-notes-1.0.0.0-beta1.md  opensearch-sql.release-notes-1.0.0.0-rc1.md  opensearch-sql.release-notes-1.0.0.0.md  opensearch-sql.release-notes-1.1.0.0.md  opensearch-sql.release-notes-1.1.0.1.md  opensearch-sql.release-notes-1.2.0.0.md  opensearch-sql.release-notes-1.2.1.0.md  opensearch-sql.release-notes-1.2.2.0.md  opensearch-sql.release-notes-1.2.3.0.md  opensearch-sql.release-notes-1.2.4.0.md  opensearch-sql.release-notes-1.3.0.0.md  opensearch-sql.release-notes-1.3.10.0.md  opensearch-sql.release-notes-1.3.12.0.md  opensearch-sql.release-notes-1.3.15.0.md  opensearch-sql.release-notes-1.3.7.0.md  opensearch-sql.release-notes-2.0.0.0-rc1.md  opensearch-sql.release-notes-2.0.0.0.md  opensearch-sql.release-notes-2.1.0.0.md  opensearch-sql.release-notes-2.10.0.0.md  opensearch-sql.release-notes-2.11.0.0.md  opensearch-sql.release-notes-2.12.0.0.md  opensearch-sql.release-notes-2.13.0.0.md  opensearch-sql.release-notes-2.14.0.0.md  opensearch-sql.release-notes-2.15.0.0.md  opensearch-sql.release-notes-2.16.0.0.md  opensearch-sql.release-notes-2.17.0.0.md  opensearch-sql.release-notes-2.18.0.0.md  opensearch-sql.release-notes-2.19.0.0.md  opensearch-sql.release-notes-2.19.3.0.md  opensearch-sql.release-notes-2.19.4.0.md  opensearch-sql.release-notes-2.19.5.0.md  opensearch-sql.release-notes-2.19.6.0.md  opensearch-sql.release-notes-2.2.0.0.md  opensearch-sql.release-notes-2.3.0.0.md  opensearch-sql.release-notes-2.4.0.0.md  opensearch-sql.release-notes-2.4.1.0.md  opensearch-sql.release-notes-2.5.0.0.md  opensearch-sql.release-notes-2.6.0.0.md  (+14 more)
scripts/: benchmark_join_prefilter.sh  build.sh  bwctest-full-restart.sh  bwctest-rolling-upgrade.sh  bwctest.sh  comment-on-duplicates.sh  integ  integtest.sh
spark/: build.gradle
spark-sql-application/: .gitignore  README.md  build.sbt  scalastyle-config.xml
sql-cli/: CONTRIBUTING.md  MAINTAINERS.md  NOTICE  README.md  development_guide.md  setup.py
sql-jdbc/: CONTRIBUTING.md  MAINTAINERS.md  README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
sql-odbc/: .gitignore  CONTRIBUTING.md  MAINTAINERS.md  NOTICE  README.md  THIRD-PARTY  aws_sdk_cpp_setup.sh  build_mac_debug64.sh  (+10 more)
sql-odbc/src/IntegrationTests/ITODBCCatalog/: CMakeLists.txt  test_odbc_catalog.cpp
sql-odbc/src/IntegrationTests/ITODBCDescriptors/: CMakeLists.txt  pch.h  test_odbc_descriptors.cpp
sql-odbc/src/IntegrationTests/ITODBCHelper/: CMakeLists.txt  it_odbc_helper.cpp  it_odbc_helper.h
sql-odbc/src/IntegrationTests/ITODBCResults/: CMakeLists.txt  pch.h  test_odbc_results.cpp
sql-odbc/src/PerformanceTests/PTODBCExecution/: CMakeLists.txt  performance_odbc_execution.cpp
sql-odbc/src/PerformanceTests/PTODBCInfo/: CMakeLists.txt  performance_odbc_info.cpp
sql-odbc/src/UnitTests/UTConn/: CMakeLists.txt  test_conn.cpp  test_query_execution.cpp
sql-odbc/src/UnitTests/UTCriticalSection/: CMakeLists.txt  pch.cpp  test_critical_section.cpp
sql-odbc/src/UnitTests/UTHelper/: CMakeLists.txt  unit_test_helper.cpp  unit_test_helper.h
sql-odbc/src/UnitTests/UTRabbit/: CMakeLists.txt  pch.h  test_rabbit.cpp
sql-odbc/src/opensearchenlist/: CMakeLists.txt  msdtc_enlist.cpp  opensearch_enlist.h
sql-odbc/src/sqlodbc/: CMakeLists.txt  bind.c  bind.h  catfunc.h  columninfo.c  columninfo.h  connection.c  convert.c  convert.h  descriptor.c  descriptor.h  dlg_specific.c  dlg_specific.h  dlg_wingui.c  drvconn.c  drvconn.h  environ.c  environ.h  execute.c  info.c  loadlib.c  loadlib.h  misc.c  misc.h  multibyte.c  multibyte.h  mylog.c  mylog.h  odbcapi.c  odbcapi30.c  odbcapi30w.c  odbcapiw.c  opensearch_api30.c  opensearch_apifunc.h  opensearch_communication.cpp  opensearch_communication.h  opensearch_connection.cpp  opensearch_connection.h  opensearch_driver_connect.cpp  opensearch_driver_connect.h  (+34 more)
(+9081 files in other folders)
